--- a/Class-05/assets/css/style.css
+++ b/Class-05/assets/css/style.css
@@ -448,4 +448,5 @@ input[type="submit"]:hover, button[type="submit"]:hover {
   margin: 0 auto;
   display: block;
   margin-top: 42px;
+  background:#24d5a1;
 }
