--- a/Class-05/assets/css/style-2.css
+++ b/Class-05/assets/css/style-2.css
@@ -1,14 +1,14 @@
-.hero-area {background-image: url(../img/hero-bg-2.png); background-color: #359af3;}
+.hero-area-2 {background-image: url(../img/hero-bg-2.png); background-color: #359af3;}
 .boxed-btn {background-color: #24d5a1;}
 
-.hero-area {
+.hero-area-2 {
     background-size: cover;
     background-position: center;
     line-height: 1.8;
     color: #fff;
     padding: 80px 0;
 }
-.hero-area h1 {
+.hero-area-2 h1 {
     font-size: 46px;
     color: #fff;
     line-height: 48px;
